--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kakapo</title>
+
   </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <body>
+
     <noscript>Le Strigops kakapo (Strigops habroptila), aussi appelé kakapo ou perroquet-hibou</noscript>
     <div id="root"></div>
     <!--
